name:                learning
version:             0.1.0.0
synopsis:            Project for learning Haskell
homepage:            https://github.com/MetalRain/learning#readme
license:             MIT
author:              Otto Martikainen
maintainer:          developer.otto@gmail.com
copyright:           2017 Otto Martikainen
category:            Fun
build-type:          Simple
cabal-version:       >=1.10

executable learning-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MetalRain/learning
