name:                learning
version:             0.1.0.0
license:             MIT
author:              Otto Martikainen
maintainer:          martikainenotto@gmail.com
copyright:           2017 Otto Martikainen
category:            Fun
build-type:          Simple
cabal-version:       >=1.10

executable learning-exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
